deployment/kubernetes/micro-tiling.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - name: web
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-pod
          image: microtiling/api
          imagePullPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-tiling-api
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.priority: "1"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: api-service
          servicePort: web
---
apiVersion: v1
kind: Service
metadata:
  name: a-pi-service
spec:
  selector:
    app: a-pi
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-pi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: a-pi
  template:
    metadata:
      labels:
        app: a-pi
    spec:
      containers:
        - name: a-pi-pod
          image: microtiling/a_pi
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: millllllll-service
spec:
  selector:
    app: millllllll
  ports:
    - name: gopher
      port: 3333
      targetPort: 3333
    - name: millllllll
      port: 5001
      targetPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: millllllll-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: millllllll
  template:
    metadata:
      labels:
        app: millllllll
    spec:
      containers:
        - name: millllllll-pod
          image: microtiling/millllllll
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: unitator-service
spec:
  selector:
    app: unitator
  ports:
    - name: unitator
      port: 1337
      targetPort: 1337
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unitator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unitator
  template:
    metadata:
      labels:
        app: unitator
    spec:
      containers:
        - name: unitator-pod
          image: microtiling/unitator
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: translator-service
spec:
  selector:
    app: translator
  ports:
    - name: translator
      port: 1902
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: translator
  template:
    metadata:
      labels:
        app: translator
    spec:
      containers:
        - name: translator-pod
          image: microtiling/translator
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: cruxingator-service
spec:
  selector:
    app: cruxingator
  ports:
    - name: cruxingator
      port: 8025
      targetPort: 8025
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cruxingator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cruxingator
  template:
    metadata:
      labels:
        app: cruxingator
    spec:
      containers:
        - name: cruxingator-pod
          image: microtiling/cruxingator
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: solidator-service
spec:
  selector:
    app: solidator
  ports:
    - name: solidator
      port: 2442
      targetPort: 2442
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solidator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solidator
  template:
    metadata:
      labels:
        app: solidator
    spec:
      containers:
        - name: solidator-pod
          image: microtiling/solidator
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ensicoincoin-service
spec:
  selector:
    app: ensicoincoin
  ports:
    - name: ensicoin
      port: 4224
      targetPort: 4224
    - name: rpc
      port: 4225
      targetPort: 4225
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ensicoincoin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ensicoincoin
  template:
    metadata:
      labels:
        app: ensicoincoin
    spec:
      containers:
        - name: ensicoincoin-pod
          image: johynpapin/ensicoincoin
          imagePullPolicy: Always
          args: [ "--mining" ]
