deployment/kubernetes/traefik-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    traefik.frontend.priority: "2"
spec:
  rules:
  - http:
      paths:
      - path: /traefik
        backend:
          serviceName: traefik-web-ui
          servicePort: web
